--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.yarun1</groupId>
+    <groupId>io.github.yarunkan</groupId>
     <artifactId>PigeonScript</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -31,6 +31,7 @@
     </build>
 
     <dependencies>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -43,11 +44,14 @@
             <version>${version.junit}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>${version.mockito}</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
+
 </project>
